# emobon-basic-models

./: .gitignore  README.md  pyproject.toml
analysis_cache/model_testing/: emobon_meta.pkl  preprocess_tables.pkl
configs/: model_test.json  model_test_inverse.json
docs/source/: api.md  index.md
nbs/: model_testing.ipynb  teaching_example.ipynb
scripts/: model_evaluation.py  model_evaluation_inverse.py  model_testing.py  model_testing_inverse.py
src/emobon_models/: __init__.py  modeling_config.py  modeling_data.py  modeling_evaluation.py  modeling_runner.py  modeling_runner_inverse.py
src/utils/: __init__.py  filter.py  io.py
tests/: __init__.py  test_basic.py  test_modeling_evaluation.py  test_modeling_modules.py
